<resources>
    <string name="tasks">Задания</string>
    <string name="store">Магазин</string>
    <string name="settings">Настройки</string>
    <string name="favorite">Избранное</string>
    <string name="group">Группа:</string>
    <string name="balance">Счет:</string>
    <string name="taken">Взятые</string>
    <string name="_new">Новые</string>
    <string name="product_description">Описание продукта:</string>
    <string name="buy">Купить</string>
    <string name="product">Продукт</string>
    <string name="description_undefined">Описание отсутствует</string>
    <string name="reward">Награда:</string>
    <string name="new_tasks">Новые задания</string>
    <string name="task">Задание</string>
    <string name="deadlines">Сроки:</string>
    <string name="refuse_before">Можно отказаться без штрафа до:</string>
    <string name="penalty">Штраф:</string>
    <string name="vacant_places">Осталось мест:</string>
    <string name="take">Взять</string>
    <string name="place">Место:</string>
    <string name="my_tasks">Мои задания</string>
    <string name="admin_comment">Комментарий администрации:</string>
    <string name="your_report">Ваш отчёт</string>
    <string name="comment">Комментарий:</string>
    <string name="photo">Фото:</string>
    <string name="send_to_check">Отправить на проверку</string>
    <string name="refuse_task">Отказаться от задания</string>
    <string name="redact">Отредактировать</string>
    <string name="admin_answer">Ответ администрации</string>
    <string name="accepted">Принято! Бонусы начислены</string>
    <string name="canceled">Отклонено. Штраф не начислен</string>
    <string name="penalized">Отклонено. Начислен штраф</string>
    <string name="report">Отчет</string>
    <string name="write_comment">Напишите ваш комметарий</string>
    <string name="attach_photo">Прикрепить фотографию из галереи</string>
    <string name="create_photo">Сделать новую фотографию</string>
    <string name="send_report">Отправить отчет</string>
    <string name="create_report">Сформировать отчет</string>
    <string name="delete_image">Удалить фотографию</string>
    <string name="no_new_tasks">Новых заданий пока нет…</string>
    <string name="no_taken_tasks">Нет взятых заданий</string>
    <string name="no_incheck_tasks">Ни одно ваше задание не находится на проверке</string>
    <string name="no_accepted_tasks">Нет выполненных заданий</string>
    <string name="no_refused_tasks">Нет не принятых заданий</string>
    <string name="take_task">Взять новое задание</string>
    <string name="no_taken_tasks_description">Но они обязательно скоро появятся</string>
    <string name="notification">Уведомления о новых заданиях</string>
    <string name="current_timetable">Текущее расписание:</string>
    <string name="add_group">Добавить в избранное</string>
    <string name="write_group">Введите группу…</string>
    <string name="change_avatar">Сменить аватар</string>
    <string name="group_set">Расписание установлено</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="report_photo_error">Вы должны прикрепить фотографию!</string>
</resources>