<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_blue">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bg_blue">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/MainText"
            android:id="@+id/shopTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_blue"
            android:textSize="22sp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/settings"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="15dp"
                android:padding="12dp"
                android:background="@drawable/shape_white_rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileAvatar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        tools:src="@tools:sample/avatars" />

                    <Button
                        style="@style/DefaultButton"
                        android:id="@+id/changeAvatarButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/change_avatar"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="15dp"
                android:padding="12dp"
                android:background="@drawable/shape_white_rectangle">

                <Switch
                    style="@style/SwitchOSS"
                    android:id="@+id/notifySwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:padding="12dp"
                android:background="@drawable/shape_white_rectangle">

                <TextView
                    style="@style/MainText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/current_timetable" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/PrimaryEditText"
                        android:id="@+id/currentGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/write_group"/>

                    <Button
                        style="@style/DefaultButton"
                        android:id="@+id/okButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/ok" />

                </LinearLayout>

                <Button
                    style="@style/DefaultButton"
                    android:id="@+id/addButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:text="@string/add_group" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/groupList"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/shape_bg_blue_rectangle"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>